Added clock msg to 404

--- a/public/404.html
+++ b/public/404.html
@@ -47,7 +47,16 @@
                 404 ERROR
             </div>
             
-            
+            <!--ERROR MESSAGE-->
+
+
+            <!--CLOCK MESSAGE-->
+
+            <div class="clock is-off"><span class="time" data-time=""></span></div>
+            <div class="figure"></div>
+            <div class="figure-mask"></div>
+
+            <!--CLOCK MESSAGE-->
         </div>
 
         <!--GLITCH BG-->
