Added span tags to error msg

--- a/public/404.html
+++ b/public/404.html
@@ -44,7 +44,8 @@
             <!--ERROR MESSAGE-->
 
             <div class="errormsg">
-                404 ERROR
+                <span class="blueb">4</span><span class="redb">0</span><span class="blueb">4</span>
+                 <span class="redb">E</span><span class="blueb">R</span><span class="redb">R</span><span class="blueb">O</span><span class="redb">R</span>
             </div>
             
             <!--ERROR MESSAGE-->
