--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,61 @@
             <div class="figure-mask"></div>
 
             <!--CLOCK-->
+
+
+            <!--CALENDER-->
+
+            <!--CALENDER-->
+
+
+            <!--SHORTCUTS-->
+
+            <!--SHORTCUTS-->
+
+
+            <!--SETTINGS-->
+
+            <!--SETTINGS-->
+
+
+            <!--SEARCH HISTORY-->
+
+            <!--SEARCH HISTORY-->
+
+
+            <!--BOOKMARKS MANAGER-->
+
+            <!--BOOKMARKS MANAGER-->
+
+
+            <!--WEATHER MONITOR-->
+
+            <!--WEATHER MONITOR-->
+
+
+            <!--NEWS FEED-->
+
+            <!--NEWS FEED-->
+
+
+            <!--BACKGROUND IMAGE-->
+
+            <!--BACKGROUND IMAGE-->
+
+
+            <!--GOOGLE APPS-->
+
+            <!--GOOGLE APPS-->
+
+
+            <!--GOOGLE IMAGES REVERSE SEARCH-->
+
+            <!--GOOGLE IMAGES REVERSE SEARCH-->
+
+
+            <!--DARK MODE TOGGLER-->
+
+            <!--DARK MODE TOGGLER-->
             
         </div>
 
