Added background carousel

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,44 @@
         <!--GLITCH BG-->
 
         <div class="screen glitch">
-
+            
+            <!--BG CAROUSEL-->
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-hover="false">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="../media/bg10.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg9.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg8.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg7.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg6.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg5.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg4.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="../media/bg1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+            </div>
+            <!--BG CAROUSEL-->
+            
             <!--CLOCK-->
 
             <div class="clock is-off"><span class="time" data-time=""></span></div>
