--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,10 @@
         <script src="https://code.jquery.com/jquery-2.1.3.min.js" 
                 integrity="sha256-ivk71nXhz9nsyFDoYoGf2sbjrR9ddh+XDkCcfZxjvcM=" 
                 crossorigin="anonymous">
-        </script>       
+        </script>
+        <script type="text/javascript">
+            var jQuery_2_1_3 = $.noConflict(true);
+        </script>
         <script src="./glitchclock.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
