--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,10 @@
         <script type="text/javascript">
             var jQuery_2_1_3 = $.noConflict(true);
         </script>
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" 
+                integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" 
+                crossorigin="anonymous">
+        </script>
         <script src="./glitchclock.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
