--- a/public/index.html
+++ b/public/index.html
@@ -159,6 +159,9 @@
                 integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" 
                 crossorigin="anonymous">
         </script>
+        <script type="text/javascript">
+            var jQuery_3_1_1 = $.noConflict(true);
+        </script>
         <script src="./glitchclock.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
