--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,23 @@
 
             <!--CALENDER-->
 
+            <div class="flex-contatiner">
+                <div class="calendar-container">
+                    <div class="calendarbg-container">
+                        <div class="calendarbg"></div>
+                    </div>
+                    <div class="calendar">
+                        <h2 class="month-title" id="js-month"></h2>
+                        <table class="calendar-table">
+                          <thead>
+                            <tr><th>SUN</th><th>MON</th><th>TUE</th><th>WED</th><th>THU</th><th>FRI</th><th>SAT</th></tr>
+                          </thead>
+                          <tbody id="js-calendar-body"></tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+
             <!--CALENDER-->
 
 
