Added google apps div

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,8 @@
 
 
             <!--GOOGLE APPS-->
-
+            <div class="googleapps">
+            </div>
             <!--GOOGLE APPS-->
 
 
