Structured google apps

--- a/public/index.html
+++ b/public/index.html
@@ -119,6 +119,114 @@
 
             <!--GOOGLE APPS-->
             <div class="googleapps">
+                <nav class="googleapps-nav">
+                    <ul class="googleapps-menu">
+                        <li class="googleapps-dropdown googleapps-dropdownlist">
+                            items
+                            <ul class="googleapps-dropdowngrid">
+                                <li class="googleapps-dropdowngrid-row-1">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-2">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-3">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-4">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-5">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-6">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-7">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-8">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-9">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-10">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                                <li class="googleapps-dropdowngrid-row-11">
+                                    <nav class="googleapps-dropdowngrid-row">
+                                        <ul class="googleapps-dropdowngrid-row-items">
+                                            <li class="googleapps-dropdowngrid-row-item-1">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-2">item1</li>
+                                            <li class="googleapps-dropdowngrid-row-item-3">item1</li>
+                                        </ul>
+                                    </nav>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
             </div>
             <!--GOOGLE APPS-->
 
