Added dummy dropdown box for google apps

--- a/public/index.html
+++ b/public/index.html
@@ -122,7 +122,7 @@
                 <nav class="googleapps-nav">
                     <ul class="googleapps-menu">
                         <li class="googleapps-dropdown googleapps-dropdownlist">
-                            items
+                            <span class="google-list-items">items</span>
                             <ul class="googleapps-dropdowngrid">
                                 <li class="googleapps-dropdowngrid-row-1">
                                     <nav class="googleapps-dropdowngrid-row">
