--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
         <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
 
+        <!--FAVICON-->
+        <link rel="shortcut icon" type="image/png" href="../media/bugcrushlogo.png">
+
         <!--TITLE-->
         <title>New Tab</title>
 
