--- a/public/index.html
+++ b/public/index.html
@@ -211,10 +211,13 @@
                    data-font="Verdana" 
                    data-icons="Climacons Animated" 
                    data-days="5" 
-                   data-theme="dark" 
-                   data-suncolor="#ffac05" 
-                >
-                    Faridabad, Haryana, India
+                   data-textcolor="white" 
+                   data-suncolor="#fff827" 
+                   data-mooncolor="#d7cccc" 
+                   data-cloudcolor="#7a7a7a" 
+                   data-raincolor="#7175ed" 
+                   data-snowcolor="#e8e8e8" 
+                   >
                 </a>
             </div>
             
@@ -224,11 +227,6 @@
             <!--BACKGROUND IMAGE-->
 
             <!--BACKGROUND IMAGE-->
-
-
-            <!--GOOGLE IMAGES REVERSE SEARCH-->
-
-            <!--GOOGLE IMAGES REVERSE SEARCH-->
 
 
             <!--DARK MODE TOGGLER-->
