--- a/public/index.html
+++ b/public/index.html
@@ -150,13 +150,17 @@
             <!--SHORTCUTS-->
 
             <div class="shortcuts">
-                <ul class="shortcuts-outer shortcuts-gradient">
+                <ul class="shortcuts-outer-1">
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://mail.google.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/googleapps-gmail.png">Gmail</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://www.youtube.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/googleapps-youtube.png">Youtube</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://www.linkedin.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/linkedin.png">LinkedIn</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://web.whatsapp.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/WhatsApp.png">WhatsApp</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://discord.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/discord.png">Discord</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://github.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/github.png">Github</span></a></li>
+                </ul>
+            </div>
+            <div class="shortcuts">
+                <ul class="shortcuts-outer-2">
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://www.onlinegdb.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/onlinegdb.jpg">OnlineGDB</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://www.speedtest.net/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/speedtest.jpg">Speedtest</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://www.primevideo.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/amazon.png">Prime Video</span></a></li>
