--- a/public/404.html
+++ b/public/404.html
@@ -13,14 +13,16 @@
         <meta name="author" content="BugCrush" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <!--BOOTSTRAP-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
-              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
-              crossorigin="anonymous" 
-        />
+        <!--GTAG-->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0W5XX31FC"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-        <!--FONTAWESOME-->
-        <script src="https://kit.fontawesome.com/4509168b33.js" crossorigin="anonymous"></script>
+            gtag('config', 'G-W0W5XX31FC');
+        </script>
 
         <!--CSS-->
         <link rel="stylesheet" href="./style.css">
