--- a/public/index.html
+++ b/public/index.html
@@ -160,7 +160,7 @@
 
             <!--SHORTCUTS-->
 
-            <div class="shortcuts">
+            <div class="shortcuts-1">
                 <ul class="shortcuts-outer-1">
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://mail.google.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/googleapps-gmail.png">Gmail</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://www.youtube.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/googleapps-youtube.png">Youtube</span></a></li>
@@ -170,7 +170,7 @@
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://github.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/github.png">Github</span></a></li>
                 </ul>
             </div>
-            <div class="shortcuts">
+            <div class="shortcuts-2">
                 <ul class="shortcuts-outer-2">
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://www.onlinegdb.com/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/onlinegdb.jpg">OnlineGDB</span></a></li>
                     <li class="shortcuts-inner"><a class="shortcut-inner-item" href="https://www.speedtest.net/" target="_self"><span class="shortcut-inner-item"><img class="shortcut-inner-item" src="../media/speedtest.jpg">Speedtest</span></a></li>
@@ -267,7 +267,7 @@
                 integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" 
                 crossorigin="anonymous">
         </script>
-        <script type="text/javascript" src="../public/weather.js"></script>
+        <script type="text/javascript" src="./weather.js"></script>
         <script type="text/javascript" src="https://www.google.com/jsapi"></script>
         <!--<script type="text/javascript" src="http://feed.informer.com/widgets/VGQXPCUGBY.js"></script>-->
     
