--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet">
 
         <!--FAVICON-->
-        <link rel="shortcut icon" type="image/png" href="../media/bugcrushlogo.png">
+        <link rel="shortcut icon" type="image/png" href="./media/bugcrushlogo.png">
 
         <!--TITLE-->
         <title>New Tab</title>
